# employee

./: alembic.ini  base.py  base_model.py  db.py  db_selectors.py  docker-compose.yml  endpoints.py  main.py  models.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 20230218230050_person.py
