[tool.poetry]
name = "employee"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.9.4"
python-dotenv = "^0.21.1"
envparse = "^0.2.0"
sqlalchemy = "^2.0.4"
psycopg2-binary = "^2.9.5"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
